Hopfully final commit for v0.1.2

--- a/fixed-list.cabal
+++ b/fixed-list.cabal
@@ -7,7 +7,7 @@ License:             BSD3
 License-file:        LICENSE
 category:            Data
 Synopsis:            A fixed length list type
-Description:         A fixed length list type that encodes it's length in it's type in a natural way, and is a member of Applicative, Functor, Foldable, Traversable, and Monad.
+Description:         A fixed length list type that encodes its length in its type in a natural way, and is a member of Applicative, Functor, Foldable, Traversable, and Monad.
 
 Build-Type:          Simple
 Cabal-Version:       >= 1.2.0
@@ -17,4 +17,15 @@ library
     build-depends:	base >= 4 && < 5
     hs-source-dirs: src/
     ghc-options:	-Wall
+
+source-repository head
+  type:     git
+  branch:   master
+  location: git@github.com:jvranish/FixedList.git
+
+source-repository this
+  type:     git
+  branch:   master
+  location: git@github.com:jvranish/FixedList.git
+  tag:      0.1.2
 
